--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,14 +1,11 @@
 version: 2
 
-build:
-  tools:
-    python: "3.6"
-
 # Build from the docs/ directory with Sphinx
 sphinx:
   configuration: source/conf.py
 
 # Explicitly set the version of Python and its requirements
 python:
+  version: "3.6"
   install:
     - requirements: requirements.txt
