--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,7 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
 sphinxemoji==0.2.0
+sphinx-bootstrap-theme==0.7.1
+sphinx-gallery==0.4.0
+sphinx-press-theme==0.8.0
+myst_parser==0.15.1
